# lifesync-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.dbml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: test.yml
lifesync/: main.py  models.py
lifesync/core/: database.py  security.py  settings.py
lifesync/routes/: token.py  user.py
lifesync/routes/finance/: accounts.py  quote.py
lifesync/schemas/: __init__.py  user.py
lifesync/schemas/finance/: account.py  quotes.py
lifesync/schemas/utils/: raises.py
lifesync/utils/: message.py  raises.py  response.py
migrations/: env.py
migrations/versions/: 190fd9bdf11e_create_accounts_table.py  35657b487b85_add_color_column_in_accounts_table.py  514c6f9287fc_add_quotes_table.py  bb941ae26e0a_add_user_table.py  e4d07e13d0bb_update_quotes_table.py
scripts/: rm-requirements.sh
